--- a/src/Pages/Transition/PageTransition.css
+++ b/src/Pages/Transition/PageTransition.css
@@ -1,5 +1,5 @@
 .page-transition-container {
-  background-color: #000000; 
+  background-color: #1c1c1e; 
   height: 100%; 
   width: 100%; 
   position: relative;
