--- a/src/Pages/Menus/Menu/Menu.css
+++ b/src/Pages/Menus/Menu/Menu.css
@@ -12,12 +12,12 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: #000000; 
+  background: rgba(0, 0, 0, 0.3); 
   display: flex;
   justify-content: space-around;
   padding: 10px 0;
-  z-index: 1000;
-  border-top: 1px solid var(--container-color-two); 
+  z-index: 1002;
+  backdrop-filter: blur(4px); 
 }
 
 
