--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -5,21 +5,21 @@
   --container-color: #1c1c1e;
   --container-color-two: #3a3a3a;
   --background-color: #000000;
-  --content-width: 345px;
+  --content-width: 335px;
 }
 
 .bodyhomepage {
   margin: 0;
-  padding: 70px 0 70px 0;
+  padding: 0;
+  flex: 1;
   min-height: 100vh;
   width: 100vw;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
   box-sizing: border-box;
   background: #000000;
-  position: relative;
-  justify-content: flex-start;
 }
 
 /* Фиксированная верхняя секция с ресурсами */
@@ -39,7 +39,8 @@
 }
 
 .resources-container {
-  width: 100%;
+  width: 375px;
+  gap: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -52,7 +53,7 @@
   padding: 8px 10px;
   background: #121212;
   justify-content: center;
-  min-width: 80px;
+  width: 80px;
 }
 
 .resource-count {
@@ -87,7 +88,7 @@
   background-color: #0f0f0f;
   border-radius: 12px;
   padding: 15px;
-  margin-bottom: 20px;
+  margin-top: 70px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -170,11 +171,11 @@
 .squares-container {
   width: 370px;
   display: flex;
+  margin-top: 10px;
   flex-direction: column;
-  gap: 10px;
-  margin-bottom: 5px;
+  gap: 13px;
   flex: 1;
-  min-height: 410px;
+  height: auto;
 }
 
 .square-row {
