--- a/src/Pages/Tasks/Tasks.css
+++ b/src/Pages/Tasks/Tasks.css
@@ -24,7 +24,7 @@ html, .bodytaskspage {
   flex: 1;
   min-height: 100vh;
   width: 100vw;
-  background-color: #1c1c1e;
+  background-color: #000000;
   display: flex;
   justify-content: center;
   align-items: center;
