--- a/src/Pages/Friends/Containers/ViewSection/ViewFriendsButton.css
+++ b/src/Pages/Friends/Containers/ViewSection/ViewFriendsButton.css
@@ -5,7 +5,7 @@
 
 .friends-card {
   width: 325px;
-  background: #121212;
+  background: #0f0f0f;
   border-radius: 0.75rem;
   padding: 1.5rem;
   margin: 0 auto;
