--- a/src/Pages/Home/Containers/TopSection/FixedTopSection.css
+++ b/src/Pages/Home/Containers/TopSection/FixedTopSection.css
@@ -26,7 +26,7 @@
   align-items: center;
   border-radius: 10px;
   padding: 8px 10px;
-  background: #121212;
+  background: #0f0f0f;
   justify-content: center;
   width: 80px;
 }
