--- a/src/Pages/Store/Store.css
+++ b/src/Pages/Store/Store.css
@@ -1,7 +1,7 @@
 .profile-page {
     margin: 0;
     padding: 0;
-    height: auto;
+    min-height: 100vh;
     width: 100%;
     background-color: #000000;
     display: flex;
@@ -10,6 +10,110 @@
     position: relative;
 }
 
+.store-content {
+    margin: 0 auto;
+    width: 100%;
+    flex-grow: 1;
+    padding: 80px 23px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.gifts-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 170px);
+    gap: 20px;
+    justify-content: center;
+    align-items: start;
+    padding: 0;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 340px;
+}
+
+.gift-card {
+    
+    border-radius: 15px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 5px 15px rgba(255, 165, 0, 0.2);
+    height: 280px;
+    width: 170px;
+    box-sizing: border-box;
+}
+
+.gift-header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 15px;
+    gap: 10px;
+}
+
+.price-badge{
+    color: orange;
+    font-size: 12px;
+    padding: 4px 12px;
+    border-radius: 10px;
+    background-color: #1c1c1e;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-weight: bold;
+}
+
+.user-count {
+    color: white;
+    font-size: 12px;
+    padding: 4px 12px;
+    border-radius: 10px;
+    background-color: #1c1c1e;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-weight: bold;
+}
+
+.gift-image {
+    margin: 10px 0;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.buy-button {
+    width: 100%;
+    padding: 8px;
+    background: linear-gradient(to right, #ff8c00, #ff5500);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 12px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+}
+
+.buy-button:hover {
+    background: linear-gradient(to right, #ff5500, #ff8c00);
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(255, 165, 0, 0.4);
+}
+
+/* Стили для модального окна */
 .modal-overlay {
   position: fixed;
   top: 0;
