--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -107,3 +107,12 @@
 .square:active .square-front {
   background-color: #666;
 }
+
+.squares-container.disabled {
+  pointer-events: none;
+  opacity: 0.7;
+}
+
+.squares-container.disabled .square {
+  cursor: not-allowed;
+}
