--- a/src/Pages/Store/Containers/Modal/ConfirmModal.css
+++ b/src/Pages/Store/Containers/Modal/ConfirmModal.css
@@ -69,7 +69,8 @@
   text-align: center;
   margin-bottom: 25px;
   color: white;
-  font-size: 16px;
+  font-weight: bold;
+  font-size: 14px;
 }
 
 .confirm-message p {
@@ -80,14 +81,14 @@
   background: linear-gradient(to right, #ff8c00, #ff5500);
   color: white;
   border: none;
-  border-radius: 8px;
+  border-radius: 15px;
   padding: 12px 24px;
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease;
   width: 100%;
-  max-width: 300px;
+  
 }
 
 .confirm-button:hover:not(:disabled) {
